--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ logging.level.root=ERROR
 
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DB:study}
-spring.datasource.username=${MYSQL_USER:root}
-spring.datasource.password=${MYSQL_PASSWORD:marcello}
+spring.datasource.url=jdbc:mysql://localhost:3306/study
+spring.datasource.username=root
+spring.datasource.password=marcello
 
